# connectedhomeip

./: .gitmodules
examples/all-clusters-app/all-clusters-common/: all-clusters-app.zap
examples/all-clusters-app/linux/: AllClustersCommandDelegate.cpp  AllClustersCommandDelegate.h  BUILD.gn  ClusterChangeAttribute.cpp  WindowCoveringManager.cpp  args.gni  main-common.cpp
examples/all-clusters-app/linux/Manager/: BoolManager.cpp  BoolManager.h  ColorControlManager.cpp  ColorControlManager.h  DoorLockManager.cpp  DoorLockManager.h  LevelManager.cpp  LevelManager.h  MeasurementManager.cpp  MeasurementManager.h  MotionManager.cpp  MotionManager.h  OnOffManager.cpp  OnOffManager.h  WindowCoveringManager.cpp  WindowCoveringManager.h
examples/all-clusters-app/linux/include/: CHIPProjectAppConfig.h
examples/platform/linux/: AppMain.cpp  BUILD.gn  Options.cpp  Options.h
src/app/clusters/general-commissioning-server/: general-commissioning-server.cpp
src/app/clusters/on-off-server/: on-off-server.cpp
src/app/clusters/operational-credentials-server/: operational-credentials-server.cpp
src/include/platform/internal/: GenericDeviceInstanceInfoProvider.ipp
src/lib/support/: BUILD.gn  ObjectLifeCycle.h
src/lib/support/IoTer/: IoTer_json.h  IoTer_logging.cpp  IoTer_logging.h
src/platform/: BUILD.gn  device.gni
src/platform/Darwin/: BLEManagerImpl.cpp  BUILD.gn  BleConnectionDelegate.h  BleConnectionDelegateImpl.mm  CHIPDevicePlatformConfig.h  CHIPPlatformConfig.h  ConnectivityManagerImpl.cpp  DnssdImpl.cpp  NetworkCommissioningDriver.h  NetworkCommissioningThreadDriver.cpp  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h
src/platform/Linux/: BUILD.gn  CHIPDevicePlatformConfig.h  CHIPPlatformConfig.h  DnssdImpl.cpp  Logging.cpp  NetworkCommissioningThreadDriver.cpp  PosixConfig.cpp  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl_IoTer.cpp
src/platform/Linux/bluez/: ChipDeviceScanner.cpp  Helper.cpp
src/platform/OpenThread/: GenericThreadStackManagerImpl_OpenThread.h  GenericThreadStackManagerImpl_OpenThread_DL.cpp  OpenThreadDL_Manager.cpp  OpenThreadDL_Manager.h  OpenThreadUtils_DL.cpp
src/protocols/secure_channel/: CASEServer.cpp  PASESession.cpp
